# scql

./: .bazeliskrc  .bazelrc  .clang-format  .clang-tidy  .coveralls.yml  .gitignore  .golangci.yml  .licenserc.yaml  .markdownlint.yaml  .pre-commit-config.yaml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  MODULE.bazel  Makefile  README.md  REPO_LAYOUT.md  WORKSPACE  bazel_cache_setup.py  codecov.yml  go.mod  go.sum  regtest_hive.py  renovate.json  version.txt  version_build.sh
.ci/: README.md  combine_coverage_report.sh  coverage.sh  run_coverage.sh
.circleci/: config.yml  coverage-config.yml  diff-cover-config.yml  full-unittest-config.yml  lite-unittest-config.yml  regtest-config.yml  release-config.yml  unittest-config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
api/: BUILD.bazel  broker.config_openapi.yaml  broker.proto  buf.yaml  ccl.proto  common.proto  core.proto  datasource.proto  engine.proto  generate_proto.sh  grm.proto  interpreter.proto  scdb_api.config_openapi.yaml  scdb_api.proto  scql_api.proto  scql_task.proto  status.proto  status_code.proto  subgraph.proto
api/v1/: BUILD.bazel  column.proto  genproto.sh
api/v1alpha1/: BUILD.bazel  compiler.proto
bazel/: defs.bzl  repositories.bzl
benchmark/: .env  Makefile  README.md  go.mod  (+3 more)
engine/auth/: BUILD.bazel  authenticator.cc  authenticator.h  authenticator_test.cc  authorized_profile.cc  authorized_profile.h  authorized_profile.proto  pkey.cc  pkey.h  pkey_test.cc
engine/core/: BUILD.bazel  arrow_helper.h  primitive_builder.cc  primitive_builder.h  primitive_builder_test.cc  string_tensor_builder.cc  string_tensor_builder.h  string_tensor_builder_test.cc  tensor.cc  tensor.h  tensor_batch_reader.cc  tensor_batch_reader.h  tensor_batch_reader_test.cc  tensor_builder.cc  tensor_builder.h  tensor_chunk.cc  tensor_chunk.h  tensor_constructor.cc  tensor_constructor.h  tensor_constructor_test.cc  tensor_from_json.cc  tensor_from_json.h  tensor_slice.cc  tensor_slice.h  type.cc  type.h
engine/datasource/: BUILD.bazel  arrow_sql_adaptor.cc  arrow_sql_adaptor.h  arrow_sql_adaptor_factory.h  arrow_sql_adaptor_test.cc  csvdb_adaptor.cc  csvdb_adaptor.h  csvdb_adaptor_factory.cc  csvdb_adaptor_factory.h  csvdb_adaptor_test.cc  csvdb_conf.proto  dataproxy_conf.proto  datasource.proto  datasource_adaptor.cc  datasource_adaptor.h  datasource_adaptor_factory.h  datasource_adaptor_mgr.cc  datasource_adaptor_mgr.h  dm_adaptor.cc  dm_adaptor.h  dm_adaptor_factory.cc  dm_adaptor_factory.h  dm_adaptor_kuscia_test.cc  dp_adaptor.cc  dp_adaptor.h  dp_adaptor_factory.cc  dp_adaptor_factory.h  dp_adaptor_kuscia_test.cc  dp_adaptor_test.cc  duckdb_wrapper.cc  duckdb_wrapper.h  duckdb_wrapper_test.cc  embed_router.cc  embed_router.h  embed_router.proto  embed_router_test.cc  http_router.cc  http_router.h  http_router.proto  kuscia_datamesh_router.cc  (+17 more)
engine/exe/: BUILD.bazel  flags.cc  flags.h  main.cc  version.h  version.h.bak
engine/framework/: BUILD.bazel  exec.cc  exec.h  executor.cc  executor.h  operator.cc  operator.h  party_info.cc  party_info.h  party_info_test.cc  registry.cc  registry.h  session.cc  session.h  session_manager.cc  session_manager.h  session_manager_test.cc  session_negotiation.proto  tensor_table.cc  tensor_table.h
engine/link/: BUILD.bazel  channel_manager.cc  channel_manager.h  listener.cc  listener.h  listener_test.cc  mux_link_factory.cc  mux_link_factory.h  mux_link_factory_test.cc  mux_receiver.proto  mux_receiver_service.cc  mux_receiver_service.h  mux_receiver_service_test.cc  rpc_helper.cc  rpc_helper.h  rpc_helper_test.cc
engine/operator/: BUILD.bazel  all_ops_register.cc  all_ops_register.h  all_ops_register_test.cc  arithmetic.cc  arithmetic.h  arithmetic_test.cc  arrow_func.cc  arrow_func.h  arrow_func_test.cc  binary_base.cc  binary_base.h  binary_test.h  broadcast_to.cc  broadcast_to.h  broadcast_to_test.cc  bucket.cc  bucket.h  bucket_bench.cc  bucket_test.cc  case_when.cc  case_when.h  case_when_test.cc  cast.cc  cast.h  cast_test.cc  coalesce.cc  coalesce.h  coalesce_test.cc  compare.cc  compare.h  compare_test.cc  concat.cc  concat.h  concat_test.cc  constant.cc  constant.h  constant_test.cc  copy.cc  copy.h  (+113 more)
engine/services/: BUILD.bazel  engine_service_impl.cc  engine_service_impl.h  engine_service_impl_test.cc  error_collector_service.proto  error_collector_service_impl.cc  error_collector_service_impl.h  mock_report_service.proto  pipeline.cc  pipeline.h  prometheus_service.proto  prometheus_service_impl.cc  prometheus_service_impl.h  run_plan_core.cc  run_plan_core.h
engine/util/: BUILD.bazel  communicate_helper.h  concurrent_queue.h  context_util.cc  context_util.h  copy_to_proto_visitor.h  copy_to_proto_vistor.h  datamesh_helper.cc  datamesh_helper.h  datamesh_helper_test.cc  filepath_helper.cc  filepath_helper.h  filepath_helper_test.cc  kpad_task_helper.cc  kpad_task_helper.h  kpad_task_helper_test.cc  logging.cc  logging.h  ndarray_to_arrow.cc  ndarray_to_arrow.h  prefix_sum.cc  prefix_sum.h  progress_util.h  prometheus_monitor.cc  prometheus_monitor.h  psi_detail_logger.cc  psi_detail_logger.h  psi_helper.cc  psi_helper.h  psi_helper_bench.cc  psi_helper_test.cc  spu_io.cc  spu_io.h  ssl_helper.cc  ssl_helper.h  ssl_helper_test.cc  string_util.cc  string_util.h  string_util_test.cc  stringifier.cc  (+15 more)
engine/util/disk/: BUILD.bazel  arrow_reader.cc  arrow_reader.h  arrow_writer.cc  arrow_writer.h  read_write_bench.cc  reader_writer_test.cc
engine/util/dp/: BUILD.bazel  flight.proto
engine/util/psi/: BUILD.bazel  batch_provider.cc  batch_provider.h  batch_provider_test.cc  cipher_intersection.cc  cipher_intersection.h  cipher_intersection_bench.cc  cipher_intersection_test.cc  common.cc  common.h  detail_logger.cc  detail_logger.h  ub_helper.cc  ub_helper.h
python/engine/: BUILD.bazel  engine_bindings.cc
python/src/: README.md  pyproject.toml  setup.py
python/src/scql/: __init__.py
python/src/scql/compiler/: __init__.py
python/src/scql/engine/: __init__.py
vldb/sort-test/: BUILD.bazel  setup_wan.sh  sort.cc
(+1003 files in other folders)
