# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "scql",
    version = "0.9.4",
    compatibility_level = 1,
)

bazel_dep(name = "yacl", version = "0.4.5b10-nightly-20250110")
bazel_dep(name = "psi", version = "0.6.0.dev250123")
bazel_dep(name = "spulib", version = "0.9.4.dev20250416")
bazel_dep(name = "heu", version = "0.6.0.dev20250123")
bazel_dep(name = "dataproxy_sdk_cc", version = "0.5.0.dev20250423")
bazel_dep(name = "kuscia", version = "0.13.0b1")
bazel_dep(name = "apple_support", version = "1.17.1")
bazel_dep(name = "rules_cuda", version = "0.2.3")
bazel_dep(name = "rules_cc", version = "0.0.12")
single_version_override(
    module_name = "rules_cc",
    version = "0.0.12",
)

bazel_dep(name = "rules_proto", version = "6.0.2")

# non module dependencies
non_module_dependencies = use_extension("//bazel:defs.bzl", "non_module_dependencies")
use_repo(
    non_module_dependencies,
    "com_github_duckdb",
    "com_github_gperftools_gperftools",
    "org_pocoproject_poco",
)

bazel_dep(name = "arrow", version = "17.0.0", repo_name = "org_apache_arrow")
bazel_dep(name = "ncurses", version = "6.4.20221231.bcr.3")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_java", version = "8.6.1")
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "rules_proto_grpc_cpp", version = "5.0.1")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
single_version_override(
    module_name = "rules_foreign_cc",
    version = "0.12.0",
)

bazel_dep(name = "bazel_features", version = "1.20.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "openssl", version = "3.3.2")
bazel_dep(name = "spdlog", version = "1.14.1")
bazel_dep(name = "fmt", version = "11.0.2")
bazel_dep(name = "brpc", version = "1.13.0")
bazel_dep(name = "abseil-cpp", version = "20240722.0")
bazel_dep(name = "boost.uuid", version = "1.83.0.bcr.1")
bazel_dep(name = "boost.multiprecision", version = "1.83.0")
bazel_dep(name = "boost.endian", version = "1.83.0")
bazel_dep(name = "boost.geometry", version = "1.83.0")
bazel_dep(name = "boost.graph", version = "1.83.0")
bazel_dep(name = "boost.spirit", version = "1.83.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "boost.serialization", version = "1.83.0.bcr.1")
bazel_dep(name = "prometheus-cpp", version = "1.2.4")
bazel_dep(name = "protobuf", version = "27.3", repo_name = "com_google_protobuf")
single_version_override(
    module_name = "protobuf",
    version = "27.3",
)

bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a")
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")
bazel_dep(name = "rules_python", version = "0.34.0")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "msgpack-c", version = "6.1.0")
bazel_dep(name = "grpc", version = "1.66.0.bcr.4")
single_version_override(
    module_name = "grpc",
    version = "1.66.0.bcr.4",
)

# use sf.bcr
bazel_dep(name = "curl", version = "8.4.0.bcr.2")
single_version_override(
    module_name = "curl",
    version = "8.4.0.bcr.2",
)

new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

new_local_repository(
    name = "macos_omp_x64",
    build_file = "@yacl//bazel:local_openmp_macos.BUILD",
    path = "/usr/local/opt/libomp",
)

new_local_repository(
    name = "macos_omp_arm64",
    build_file = "@yacl//bazel:local_openmp_macos.BUILD",
    path = "/opt/homebrew/opt/libomp/",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

# test
bazel_dep(name = "googletest", version = "1.15.2", dev_dependency = True)
bazel_dep(name = "google_benchmark", version = "1.8.5", dev_dependency = True)
