# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "core_proto",
    srcs = ["core.proto"],
    deps = [
        ":common_proto",
        ":status_proto",
    ],
)

proto_library(
    name = "status_code_proto",
    srcs = ["status_code.proto"],
)

proto_library(
    name = "engine_proto",
    srcs = ["engine.proto"],
    deps = [
        ":common_proto",
        ":core_proto",
        ":status_proto",
        ":subgraph_proto",
        "@com_google_protobuf//:empty_proto",
        "@spulib//libspu:spu_proto",
    ],
)

proto_library(
    name = "status_proto",
    srcs = ["status.proto"],
    deps = [
        "@com_google_protobuf//:any_proto",
    ],
)

proto_library(
    name = "common_proto",
    srcs = ["common.proto"],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

cc_proto_library(
    name = "common_cc_proto",
    deps = [":common_proto"],
)

cc_proto_library(
    name = "engine_cc_proto",
    deps = [":engine_proto"],
)

cc_proto_library(
    name = "core_cc_proto",
    deps = [":core_proto"],
)

cc_proto_library(
    name = "status_cc_proto",
    deps = [":status_code_proto"],
)

cc_proto_library(
    name = "interpreter_cc_proto",
    deps = [":interpreter_proto"],
)

proto_library(
    name = "subgraph_proto",
    srcs = [
        "subgraph.proto",
    ],
    deps = [":core_proto"],
)

proto_library(
    name = "interpreter_proto",
    srcs = ["interpreter.proto"],
    deps = [
        ":common_proto",
        ":core_proto",
        ":status_proto",
        ":subgraph_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@spulib//libspu:spu_proto",
    ],
)

proto_library(
    name = "scql_task_proto",
    srcs = ["scql_task.proto"],
    deps = [
        ":common_proto",
        ":engine_proto",
        ":subgraph_proto",
        "@spulib//libspu:spu_proto",
    ],
)

cc_proto_library(
    name = "scql_task_cc_proto",
    deps = [":scql_task_proto"],
)

go_proto_library(
    name = "spu_go_proto",
    importpath = "github.com/secretflow/scql/pkg/proto-gen/spu",
    protos = ["@spulib//libspu:spu_proto"],
)

go_proto_library(
    name = "googleapis_go_proto",
    importpath = "google.golang.org/genproto/googleapis/api",
    protos = [
        "@googleapis//google/api:annotations_proto",
        "@googleapis//google/api:field_behavior_proto",
        "@googleapis//google/api:http_proto",
    ],
)

go_proto_library(
    name = "scql_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/secretflow/scql/pkg/proto-gen/scql",
    protos = [
        ":common_proto",
        ":core_proto",
        ":engine_proto",
        ":interpreter_proto",
        ":scql_task_proto",
        ":status_code_proto",
        ":status_proto",
        ":subgraph_proto",
    ],
    deps = [
        ":googleapis_go_proto",
        ":spu_go_proto",
    ],
)

# lint

buf_lint_test(
    name = "core_proto_lint",
    config = "buf.yaml",
    targets = [":core_proto"],
)

buf_lint_test(
    name = "status_code_proto_lint",
    config = "buf.yaml",
    targets = [":status_code_proto"],
)

buf_lint_test(
    name = "engine_proto_lint",
    config = "buf.yaml",
    targets = [":engine_proto"],
)

buf_lint_test(
    name = "status_proto_lint",
    config = "buf.yaml",
    targets = [":status_proto"],
)

buf_lint_test(
    name = "common_proto_lint",
    config = "buf.yaml",
    targets = [":common_proto"],
)

buf_lint_test(
    name = "subgraph_proto_lint",
    config = "buf.yaml",
    targets = [":subgraph_proto"],
)

buf_lint_test(
    name = "interpreter_proto_lint",
    config = "buf.yaml",
    targets = [":interpreter_proto"],
)
