# Copyright 2025 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_cpp//:defs.bzl", "cpp_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "compiler_proto",
    srcs = ["compiler.proto"],
    deps = [
        "//api:common_proto",
        "//api:core_proto",
        "//api:interpreter_proto",
        "//api:status_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@googleapis//google/api:annotations_proto",
        "@googleapis//google/api:field_behavior_proto",
        "@spulib//libspu:spu_proto",
    ],
)

cpp_proto_library(
    name = "compiler_cpp_proto",
    protos = [":compiler_proto"],
)

go_proto_library(
    name = "compiler_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/secretflow/scql/pkg/proto-gen/scql/v1alpha1",
    protos = [":compiler_proto"],
    deps = [
        "//api:googleapis_go_proto",
        "//api:scql_go_proto",
        "//api:spu_go_proto",
    ],
)
