# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "pkey",
    srcs = ["pkey.cc"],
    hdrs = ["pkey.h"],
    deps = [
        "@com_github_openssl_openssl//:openssl",
        "@yacl//yacl/base:exception",
        "@yacl//yacl/utils:scope_guard",
    ],
)

cc_test(
    name = "pkey_test",
    srcs = ["pkey_test.cc"],
    deps = [
        ":pkey",
        "@com_github_brpc_brpc//:butil",
        "@com_github_fmtlib_fmt//:fmtlib",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

proto_library(
    name = "authorized_profile_proto",
    srcs = ["authorized_profile.proto"],
)

cc_proto_library(
    name = "authorized_profile_cc_proto",
    deps = [":authorized_profile_proto"],
)

cc_library(
    name = "authorized_profile",
    srcs = ["authorized_profile.cc"],
    hdrs = ["authorized_profile.h"],
    deps = [
        ":authorized_profile_cc_proto",
        "@yacl//yacl/base:exception",
    ],
)

cc_library(
    name = "authenticator",
    srcs = ["authenticator.cc"],
    hdrs = ["authenticator.h"],
    deps = [
        ":authorized_profile",
        ":pkey",
        "@com_github_brpc_brpc//:butil",
        "@com_google_absl//absl/strings",
    ],
)
