# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//engine/bazel:scql.bzl", "scql_cc_test")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "authorized_profile_proto",
    srcs = ["authorized_profile.proto"],
)

cc_proto_library(
    name = "authorized_profile_cc_proto",
    deps = [":authorized_profile_proto"],
)

cc_library(
    name = "authorized_profile",
    srcs = ["authorized_profile.cc"],
    hdrs = ["authorized_profile.h"],
    deps = [
        ":authorized_profile_cc_proto",
        "@com_google_protobuf//:json_util",
        "@yacl//yacl/base:exception",
    ],
)

cc_library(
    name = "authenticator",
    srcs = ["authenticator.cc"],
    hdrs = ["authenticator.h"],
    deps = [
        ":authorized_profile",
        "@abseil-cpp//absl/strings",
        "@brpc//:butil",
        "@yacl//yacl/crypto:key_utils",
    ],
)

scql_cc_test(
    name = "authenticator_test",
    srcs = ["authenticator_test.cc"],
    deps = [
        ":authenticator",
        # NOTE:  include @brpc//:bthread to fix circle dependency between `@brpc//:bthread` and `@brpc//:butil`
        "@brpc//:bthread",
        "@brpc//:butil",
        "@yacl//yacl/base:exception",
    ],
)
